Added basic test case, still need to work out the classpath issues